<resources>
    <string name="app_name">Warehub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="items">Items</string>
    <string name="add">Add</string>
    <string name="bill">Bill</string>
    <string name="report">Report</string>
    <string name="manage_items">Manage Items</string>
    <string name="add_product">Add product</string>
    <string name="bill_generate">Bill generate</string>
    <string name="dharmesh_kashyap">Dharmesh Kashyap</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="profile_edit">Profile edit</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="reset_app_data">Reset app data</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="allitem">All Items</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="save_product">Add Product</string>
    <string name="clear_search">Clear search</string>
    <string name="search_products">Search products</string>
    <string name="add_name_to_generate_report">Add name to generate report</string>
    <string name="generate">Generate</string>
    <string name="final_report_csv">final_report.csv</string>
    <string name="generate_report">Generate Report</string>
    <string name="additems">Add Items</string>
    <string name="scan">Click Here To Scan</string>
    <string name="update">Update product</string>
    <string name="edit">Edit Product</string>
</resources>