<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_report.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate_report"
                android:textSize="35dp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:textStyle="bold"
                android:textSize="17dp"
                android:gravity="center"
                android:text="@string/add_name_to_generate_report" />

            <EditText
                android:id="@+id/et_file_name"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/final_report_csv" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_generate"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/generate"
                    android:contentDescription="@string/generate"
                    android:scaleType="fitCenter"
                    android:background="@drawable/cornerbox"
                    android:padding="8dp"/>


                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="Share Report"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginLeft="22dp"
                    android:padding="8dp"
                    android:src="@drawable/baseline_share_24" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
